<resources>
    <string name="app_name">My Application</string>
    <string name="hello">HelloWorld!</string>
    <string name="hintname">账号：</string>
    <string name="hintpass">密码：</string>
    <string name="login">登录</string>
    <string name="errorMsg">账号密码错误</string>
    <string name="helloname">你好：</string>
    <string name="selectpic">从相册选取</string>
    <string name="cancel">取消</string>
    <string name="tekephoto">拍照</string>
    <string name="mLogin">登录</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="phoneNumber">手机号:</string>
    <string name="email">邮箱:</string>
    <string name="infirm_password">确认密码:</string>
    <string name="register">注册</string>
    <string name="newAccount">新用户注册</string>
    <string name="add">添加</string>
    <string name="address">地址管理</string>
    <string name="completed">完成</string>
</resources>
