<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kangningj.myapplication.activity.RegisterActivity">
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        android:textSize="12pt"
        android:textColor="#FFFFFFFF"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <EditText
            android:padding="5dp"
            android:id="@+id/m_reg_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/account"
            android:maxLines="1"
            android:maxLength="11"
            android:textSize="11pt"
            android:inputType="textAutoComplete"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>

        <EditText
            android:id="@+id/m_reg_password"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:maxLength="14"
            android:textSize="11pt"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>
        <EditText
            android:id="@+id/m_infirm_password"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/infirm_password"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:maxLength="14"
            android:textSize="11pt"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>
        <EditText
            android:padding="5dp"
            android:id="@+id/m_reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/phoneNumber"
            android:maxLines="1"
            android:maxLength="11"
            android:textSize="11pt"
            android:inputType="phone"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>
        <EditText
            android:padding="5dp"
            android:id="@+id/m_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:textSize="11pt"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>
        <Button
            android:id="@+id/m_reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="5dp"
            android:textSize="11pt"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/button_bg"/>
    </LinearLayout>

</LinearLayout>
