<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kangningj.myapplication.activity.MainActivity">

    <com.example.kangningj.myapplication.customview.CircleImageView
        android:id="@+id/imv_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:src="@drawable/defhead"
        app:border_width="0dp"
        app:border_color="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hintname"
        android:maxLines="1"
        android:background="@drawable/loginhead_bg"/>

    <EditText
        android:id="@+id/et_passWord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hintpass"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/loginhead_bg"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login" />
</LinearLayout>
