<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="10dp"
    tools:context="com.example.kangningj.myapplication.activity.LoginActivity">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/login_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        fresco:placeholderImage="@drawable/defhead"
        fresco:roundAsCircle="true"
        fresco:roundingBorderWidth="0dp"
        fresco:roundingBorderColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:padding="5dp"
            android:id="@+id/m_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/account"
            android:maxLines="1"
            android:maxLength="11"
            android:textSize="11pt"
            android:inputType="number"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>

        <EditText
            android:id="@+id/m_login_password"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:maxLength="14"
            android:textSize="11pt"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:textCursorDrawable="@color/colorPrimary"/>

        <Button
            android:id="@+id/m_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mLogin"
            android:layout_marginTop="5dp"
            android:textSize="11pt"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/button_bg"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/forget_Text"
                android:textColor="#ed3f3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="忘记密码？"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/reg_Text"
                android:textColor="#ed3f3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="新用户注册"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
