<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/imv_user_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        fresco:placeholderImage="@drawable/defhead"
        fresco:roundAsCircle="true"
        fresco:roundingBorderColor="@color/colorPrimary"
        fresco:roundingBorderWidth="1dp" />

    <TextView
        android:id="@+id/tv_user_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="电子邮箱："
                android:textSize="11pt" />

            <TextView
                android:id="@+id/tv_user_balance"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="￥500"
                android:textSize="11pt" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="地址管理："
                android:textSize="11pt" />

            <TextView
                android:id="@+id/tv_user_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="XXXX省XXX市"
                android:textSize="11pt" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_user_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="11pt"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="电子邮箱："
                android:textSize="11pt" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="XXXXX@163.com"
                android:textSize="11pt" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="5dp"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="11pt"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机号码："
                android:textSize="11pt" />

            <TextView
                android:id="@+id/tv_user_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="4008208820"
                android:textSize="11pt" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="5dp"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="11pt"
            android:visibility="gone" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/bt_user_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/completed"
            android:textColor="#FFFFFFFF"
            android:textSize="11pt"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary" />

</LinearLayout>
